test/libhyperion/syntaxTests/parsing/address_payable_function_type.hyp
contract C {
    function (address payable) view internal returns (address payable) f;
    function g(function (address payable) payable external returns (address payable)) public payable returns (function (address payable) payable external returns (address payable)) {
        function (address payable) payable external returns (address payable) h; h;
    }
}
// ----
// TypeError 4889: (102-172): External function types are not supported with this address size: address (512 bits) plus selector (32 bits) exceeds the VM word size (512 bits).
